New FrostyBoy Sandbox/src/objects/Machine_Inventory__c.object
<CustomObject>
    <description>This object tracks the location where a machine is kept by a distributor/Frosty Boy. All cases are raised against this record as customer location is tracked here.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Rent_from_Payments__c</fullName>
        <label>Actual Rent from Payments</label>
        <summarizedField>Monthly_Payment__c.Actual_Rent__c</summarizedField>
        <summaryForeignKey>Monthly_Payment__c.Machine_Location__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Machine Locations</relationshipLabel>
        <relationshipName>Machine_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cool_Off_End_Date__c</fullName>
        <label>Cool Off End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cool_Off_Start_Date__c</fullName>
        <label>Cool Off Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Till_date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Till date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Machine Locations (Customer)</relationshipLabel>
        <relationshipName>Machine_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributorId__c</fullName>
        <formula>Customer__r.Parent.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DistributorId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Machine_Inventory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Rent_From_Payments__c</fullName>
        <label>Expected Rent From Payments</label>
        <summarizedField>Monthly_Payment__c.Expected_Rent__c</summarizedField>
        <summaryForeignKey>Monthly_Payment__c.Machine_Location__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Formula_Distributor__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+Customer__r.Parent.Id , Customer__r.Parent.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Machine_Location1__c</fullName>
        <formula>Customer__r.Name +&apos; &apos;+  Machine_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Location_Address__c</fullName>
        <formula>Customer__r.BillingStreet +&apos;, &apos;+ Customer__r.BillingCity+&apos;, &apos;+Customer__r.BillingCountry+&apos;, &apos;+  Customer__r.BillingState +&apos;, &apos;+ Customer__r.BillingPostalCode</formula>
        <label>Machine Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Number__c</fullName>
        <label>Machine Number</label>
        <referenceTo>Machine__c</referenceTo>
        <relationshipLabel>Machine Locations</relationshipLabel>
        <relationshipName>Machine_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Machine_Status_Indicator__c</fullName>
        <description>This field value indicates
Inactive = 0
Active = 1
Cool-off = 2
Repair = 3</description>
        <label>Machine Status Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentFormula__c</fullName>
        <formula>Machine_Number__r.Monthly_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyPayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated-Cool Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Till_Date__c</fullName>
        <formula>Revenue_Till_Date__c  +  Actual_Rent_from_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FOL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Machine Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Formula_Distributor__c</columns>
        <columns>Installation_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Machine_Number__c</columns>
        <columns>Sale_price__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cool_Off</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Machine_Number__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cool-off</value>
        </filters>
        <label>Cool Off</label>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Date__c</columns>
        <columns>Machine_Number__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive</label>
    </listViews>
    <listViews>
        <fullName>Repair</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Machine_Number__c</columns>
        <columns>Installation_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Repair</value>
        </filters>
        <label>Repair</label>
    </listViews>
    <nameField>
        <displayFormat>MCL-{0000000000}</displayFormat>
        <label>Machine Locations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Machine Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CoolOffStartAndEndDatesMandotary</fullName>
        <active>true</active>
        <description>If the status is Cool of in machine location then cool off start date and cool off end date should be filled</description>
        <errorConditionFormula>And(ISPICKVAL( Status__c, &apos;Cool-off&apos;),Or(  ISNULL(Cool_Off_Start_Date__c )  , ISNULL( Cool_Off_End_Date__c ) ))</errorConditionFormula>
        <errorMessage>Enter Cool Off Details</errorMessage>
    </validationRules>
</CustomObject>